Second_Step/data/extract_data_vpl/43/0/grade_comments.txt
-The compilation or preparation of execution has failed
IntegerProfile.java:37: error: '[' expected
                longueur.addFirst(new int a);
                                         ^
IntegerProfile.java:37: error: ']' expected
                longueur.addFirst(new int a);
                                           ^
IntegerProfile.java:50: error: class, interface, or enum expected
            }
            ^
3 errors
Not compiled
